Small modifications to HTML/CSS to be more accurate regarding the provided design. Added JS file allowing to calculate the time gap and display the result. Verification about the correctness of the date inputed and errors messages to be added later.

--- a/styles.css
+++ b/styles.css
@@ -40,12 +40,17 @@ body {
     margin-top: 0.1rem;
 }
 
+input:focus {
+    outline-color: hsl(259, 100%, 65%);
+}
+
+
 .year_input {
     margin-right: 10rem;
 }
 
 .button {
-    background-color: hsl(0, 0%, 8%);
+    background-color: hsl(259, 100%, 65%);
     border-radius: 50%;
     padding: 1rem;
     position: absolute;
